fix generated oas error
