# pkg/oas/oas_response_encoders_gen.go
@@ -832,20 +832,6 @@ func encodeGetJettonInfoResponse(response *JettonInfo, w http.ResponseWriter, sp
 	return nil
 }
 
-func encodeGetJettonTransferPayloadResponse(response *JettonTransferPayload, w http.ResponseWriter, span trace.Span) error {
-	w.Header().Set("Content-Type", "application/json; charset=utf-8")
-	w.WriteHeader(200)
-	span.SetStatus(codes.Ok, http.StatusText(200))
-
-	e := new(jx.Encoder)
-	response.Encode(e)
-	if _, err := e.WriteTo(w); err != nil {
-		return errors.Wrap(err, "write")
-	}
-
-	return nil
-}
-
 func encodeGetJettonsResponse(response *Jettons, w http.ResponseWriter, span trace.Span) error {
 	w.Header().Set("Content-Type", "application/json; charset=utf-8")
 	w.WriteHeader(200)
